2001-04-02  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in: Fixed broken report calls.

2001-04-02  Kenneth Christiansen  <kenneth@gnu.org>

        * perldoc.pl: A JavaDoc like system for Perl
	* option.pl: A module required by the above program.

2001-03-31  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_fstab): Went back underground, now rumored to
	  be living in filesys.pl.in, under the name xst_filesys_parse_fstab().

2001-03-31  Hans Petter Jansson  <hpj@ximian.com>

	* filesys.pl.in: Added. Implements parsing of fstab and mtab files,
	  and manipulating the information presented by these as in-memory
	  structures.

2001-03-30  Arturo Espinosa Aldama  <arturo@ximian.com>

	* report.pl.in (xst_report): new "::" separated report format.

	* general.pl.in: when asking for report, set $xst_do_report, not
	$xst_do_verbose.

2001-03-29  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_scan): Now accepts a filename to scan from. Fallback
	  remains stdin.

2001-03-29  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_fstab): Don't use -> for hash indirection.

2001-03-29  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_fstab): Implement.

2001-03-29  Kenneth Christiansen  <kenneth@gnu.org>

        * internet-share: replacement for ishare-launc.pl. Try to follow
          the naming use in /etc/rc.d/rc.init. If you place this file there
          and put the config file in the dir specified in internet-share it
          should be able to run this script at startup.
        * ishare-launch.pl: remove

2001-03-29  Kenneth Christiansen  <kenneth@gnu.org>

        * internet-config.cfg: Template for now an internet config can look
        * ishare-launch.pl: Launcher program that reads the above config file
          and activates the settings.

2001-03-29  Hans Petter Jansson  <hpj@ximian.com>

	* debug.pl.in (xst_debug_print_struct): Print all arguments.